[BE] Added daemon which constantly checks hosts and tests

--- a/.ruff.toml
+++ b/.ruff.toml
@@ -58,3 +58,6 @@ skip-magic-trailing-comma = false
 
 # Like Black, automatically detect the appropriate line ending.
 line-ending = "auto"
+
+[lint.per-file-ignores]
+"backend/collect_data_test.py" = ["S101"]
