--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -22,7 +22,8 @@ jobs:
         python -m pip install --upgrade pip
         python -m pip install poetry
         poetry install
-        apt install -y inetutils-ping nmap 
+        
+        sudo apt install -y inetutils-ping nmap
     - name: Run Ruff
       run: |
         poetry run ruff check
