--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -26,7 +26,7 @@ jobs:
 
     - name: Test
       run: |
-        poetry run coverage run -m pytest tests
+        poetry run pytest --cov=backend/
         poetry run coverage report --fail-under=60
 
     - name: Mutation Testing
